--- a/learn_note/调试环境.md
+++ b/learn_note/调试环境.md
@@ -1,4 +1,35 @@
-对于5.7版本的 mysql 的调试记录
+## mysql v5.7 MacOS CLion 编译环境
+
+brew install openssl (必须安装1.1版本)
+
+cmake 选项:
+
+```
+-DWITH_DEBUG=1
+-DDOWNLOAD_BOOST=1
+-DDOWNLOAD_BOOST_TIMEOUT=60000
+-DWITH_BOOST=boost
+-DCMAKE_INSTALL_PREFIX=build_out
+-DMYSQL_DATADIR=build_out/data
+-DSYSCONFDIR=build_out/etc
+-DMYSQL_TCP_PORT=3307
+-DMYSQL_UNIX_ADDR=mysql-debug.sock
+-DWITH_SSL=/opt/homebrew/opt/openssl@1.1 
+```
+
+
+```
+-DWITH_DEBUG=1                     # 开启DEBUG模式
+-DDOWNLOAD_BOOST=1                 # boost不存在时自动下载
+-DDOWNLOAD_BOOST_TIMEOUT=60000     # 下载boost的超时时间
+-DWITH_BOOST=boost                 # boost目录，不存在时会自动下载到该目录
+-DCMAKE_INSTALL_PREFIX=build_out   # MySQL安装目录，可在启动时指定`--basedir`覆盖
+-DMYSQL_DATADIR=build_out/data     # MySQL数据目录，可在启动时指定`--datadir`覆盖
+-DSYSCONFDIR=build_out/etc         # `my.cnf`默认目录，可在启动时指定`--defaults-file=file_name`覆盖
+-DMYSQL_TCP_PORT=3307              # 启动端口,本机可能已安装过MySQL，避免冲突换个别的
+-DMYSQL_UNIX_ADDR=mysql-debug.sock # 默认/tmp/mysql.sock，避免冲突，此处相对与`--datadir`目录会自动创建
+-DWITH_SSL=/opt/homebrew/opt/openssl@1.1 #手动指定ssl的路径
+```
 
 参考:
 
