--- a/learn_note/调试环境.md
+++ b/learn_note/调试环境.md
@@ -31,6 +31,8 @@ cmake 选项:
 -DWITH_SSL=/opt/homebrew/opt/openssl@1.1 #手动指定ssl的路径
 ```
 
+--initialize-insecure
+
 参考:
 
 https://segmentfault.com/a/1190000040642879/en
