--- a/learn_note/调试环境.md
+++ b/learn_note/调试环境.md
@@ -31,9 +31,15 @@ cmake 选项:
 -DWITH_SSL=/opt/homebrew/opt/openssl@1.1 #手动指定ssl的路径
 ```
 
+首次运行时,需要加上以下选项,用于创建一个默认的用户.之后则无需指定. 如果不指定,会报 `Fatal error: Can't open and lock privilege tables: Unknown error 1146`
+
+```
 --initialize-insecure
+```
 
 参考:
 
-https://segmentfault.com/a/1190000040642879/en
+- https://segmentfault.com/a/1190000040642879/en
+- 官方文档给出的编译控制参数: https://dev.mysql.com/doc/refman/5.7/en/source-configuration-options.html
+- 初始目录的解释: https://dev.mysql.com/doc/refman/5.7/en/data-directory-initialization.html
 
